# claude-agent-sdk-cpp

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: ci.yml  format-check.yml
docs/: api-reference.md  getting-started.md  tests.md  tool-reference.md  troubleshooting.md  upstream-sync.md
examples/: CMakeLists.txt  README.md  agents.cpp  error_handling.cpp  filesystem_agents.cpp  hooks.cpp  include_partial_messages.cpp  max_budget_usd.cpp  max_thinking_tokens.cpp  mcp_calculator.cpp  plugin_example.cpp  quick_start.cpp  setting_sources.cpp  stderr_callback_example.cpp  streaming_mode.cpp  system_prompt.cpp  tool_permission_callback.cpp  tools_option.cpp
examples/plugins/demo-plugin/commands/: greet.md
include/claude/: claude.hpp  client.hpp  errors.hpp  hooks.hpp  mcp.hpp  query.hpp  transport.hpp  types.hpp  version.hpp
include/claude/ext/: session_storage.hpp
include/claude/mcp/: argument_extractor.hpp  decorators.hpp  server.hpp  tool.hpp  type_traits.hpp
include/claude/protocol/: control.hpp
src/: client.cpp  errors.cpp  query.cpp  types.cpp  version.cpp
src/ext/: session_storage.cpp
src/internal/: message_parser.cpp  message_parser.hpp
src/internal/subprocess/: process.cpp  process.hpp  process_posix.cpp  process_win32.cpp
src/internal/transport/: cli_verification.cpp  cli_verification.hpp  subprocess_cli.cpp  subprocess_cli.hpp  subprocess_env.hpp  subprocess_transport.cpp  subprocess_transport.hpp
src/protocol/: control.cpp
tests/: CMakeLists.txt  test_utils.hpp  test_version.cpp
tests/ext/: test_session_storage.cpp
tests/extra/: README.md  test_multithreading.cpp
tests/integration/: sdk_mcp_integration.cpp  sdk_mcp_integration_errors.cpp  test_agents_integration.cpp  test_client.cpp  test_control_protocol.cpp  test_max_thinking_tokens.cpp  test_mcp_fastmcpp.cpp  test_mcp_integration.cpp  test_query.cpp  test_sandbox_integration.cpp  test_session_integration.cpp  test_streaming_integration.cpp  test_v0135_parity.cpp
tests/unit/: test_agents.cpp  test_control.cpp  test_file_checkpointing.cpp  test_mcp_message.cpp  test_mcp_permissions.cpp  test_mcp_templates.cpp  test_parity_fields.cpp  test_parser.cpp  test_sandbox.cpp  test_subprocess.cpp  test_temp_file_security.cpp  test_thinking_config.cpp  test_transport_cli_path.cpp  test_types.cpp
tools/: CMakeLists.txt  debug.cpp
